--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/memach
+spring.datasource.url=jdbc:mysql://localhost:3306/memeplanet
 spring.datasource.username=root
-spring.datasource.password=KM/EMGe7#94Kt34t
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
